增删查改功能实现

--- a/web-nodatabase/src/main/resources/application.properties
+++ b/web-nodatabase/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+#1.禁用模板引擎的缓存 2.页面修改完后 Ctrl+F9,重新编译(开发期间模板引擎页面修改以后，要实时生效)
+spring.thymeleaf.cache=false
 
+
+
+#日期格式输入
+spring.mvc.date-format=yyyy-MM-dd
